top banner addad

--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sajib das porfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<bod>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Sajib das</span> World</h1>
+            <h3>Build climber and train stopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sapiente atque impedit temporibus, cum
+                eius dicta a repudiandae nesciunt ipsam voluptates, illo veniam, repellendus laborum ea? Corporis
+                aliquilibero.</p>
+            <a class="link-button" target="_blank" href="https://github.com/sajibdas1/developer-portfolio">Hire me</a>
 
-</body>
+        </div>
+        <div class="half-width"> <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    </body>
 
-</html>
+    </html>
