--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         <div class="half-width"> <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Devloper</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere sit reprehenderit blanditiis, magni
+                iusto quis veniam animi quasi, iure laboriosam voluptatum provident aut recusandae at minus eos alias
+                magnam vitae, inventore tenetur! Non fugit, reprehenderit tenetur reiciendis suscipit qui beatae numquam
+                alias soluta vero atque corrupti, vitae neque laborum quibusdam nam repellat eaque ut dolorem saepe
+                ducimus earum? Optio, nesciunt.</p>
+            <a class="link-button" target="balank" href="">DOWNIOAD RESUME</a>
+        </div>
+    </section>
     </body>
 
     </html>
