--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 </head>
 
 <bod>
-    <section class="top-banner">
+    <section class="top-banner container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Sajib das</span> World</h1>
             <h3>Build climber and train stopper</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sapiente atque impedit temporibus, cum
-                eius dicta a repudiandae nesciunt ipsam voluptates, illo veniam, repellendus laborum ea? Corporis
-                aliquilibero.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sapiente atque impedit
+                temporibus,cueius dicta a repudiandae nesciunt ipsam voluptates, illo veniam, repellendus laboruea?
+                Corporisaliquilibero.</p>
             <a class="link-button" target="_blank" href="https://github.com/sajibdas1/developer-portfolio">Hire me</a>
 
         </div>
         <div class="half-width"> <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big container">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/my-bg2.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -41,6 +41,25 @@
                 ducimus earum? Optio, nesciunt.</p>
             <a class="link-button" target="balank" href="">DOWNIOAD RESUME</a>
         </div>
+    </section>
+    <section class="exprience-area">
+        <h1>Exprience</h1>
+        <div class="container">
+            <div class="exprience-item" id="full-stack">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="exprience-item" id="baby-developer">
+                <h1 class="baby developer-font">Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+
+            </div>
     </section>
     </body>
 
