--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
             </div>
     </section>
     </body>
+    <footer>© Peter Parker 2023, a Programming Hero initiative.</footer>
 
     </html>
